# terminal-app-quotes

./: README.md  pyproject.toml
inspire/: __main__.py  utils.py
tests/: test_api.py
